# libflow

./: CMakeLists.txt  README.md  install_libcxx.sh  manifest  repositories.manifest
.github/workflows/: libflow-ci.yml  linux.yml  macos.yml  windows.yml
build2/: bootstrap.build2
cmake/: FindSphinx.cmake
doc/: CMakeLists.txt  Doxyfile.in  about.rst  conf.py  getting_started.rst  glossary.rst  index.rst  reference.rst  using.rst
doc/using/: adaptors.rst  operations.rst  sources.rst
example/: CMakeLists.txt  custom_adaptor.cpp  custom_adaptor2.cpp  fibonacci.cpp  fibonacci_coro.cpp  leetcode1437.cpp  leetcode1672.cpp  leetcode168.cpp  leetcode176.cpp  leetcode210.cpp  pythagorean_triples.cpp  random_ints.cpp
include/: build2file  flow.hpp
include/flow/core/: flow_base.hpp  functional.hpp  invoke.hpp  macros.hpp  maybe.hpp  predicates.hpp  type_traits.hpp
include/flow/op/: adapt.hpp  all_any_none.hpp  cartesian_product.hpp  cartesian_product_with.hpp  chain.hpp  chunk.hpp  collect.hpp  contains.hpp  count.hpp  count_if.hpp  cycle.hpp  deref.hpp  drop.hpp  drop_while.hpp  equal.hpp  filter.hpp  find.hpp  flat_map.hpp  flatten.hpp  fold.hpp  for_each.hpp  group_by.hpp  inspect.hpp  interleave.hpp  is_sorted.hpp  map.hpp  map_refinements.hpp  minmax.hpp  output_to.hpp  product.hpp  reverse.hpp  scan.hpp  slide.hpp  split.hpp  stride.hpp  sum.hpp  take.hpp  take_while.hpp  to.hpp  to_range.hpp  (+5 more)
include/flow/source/: any.hpp  any_flow.hpp  async.hpp  c_str.hpp  empty.hpp  from.hpp  generate.hpp  ints.hpp  iota.hpp  istream.hpp  istreambuf.hpp  of.hpp
single_include/: flow.hpp
test/: CMakeLists.txt  build2file  macros.hpp  test_all_any_none.cpp  test_any.cpp  test_any_flow.cpp  test_async.cpp  test_basic.cpp  test_c_str.cpp  test_cartesian_product.cpp  test_cartesian_product_with.cpp  test_chain.cpp  test_chunk.cpp  test_collect.cpp  test_contains.cpp  test_count.cpp  test_count_if.cpp  test_cycle.cpp  test_deref.cpp  test_drop.cpp  test_drop_while.cpp  test_empty.cpp  test_equal.cpp  test_filter.cpp  test_find.cpp  test_flatten.cpp  test_for_each.cpp  test_from.cpp  test_from_istream.cpp  test_from_istreambuf.cpp  test_group_by.cpp  test_inspect.cpp  test_interleave.cpp  test_invoke.cpp  test_iota.cpp  test_is_sorted.cpp  test_map.cpp  test_map_refinements.cpp  test_maybe.cpp  test_minmax.cpp  (+17 more)
tools/: CMakeLists.txt  make_single_header.cpp
